# GestorDeBaseDeDatos

./: CMakeLists.txt
src/: main.cpp
src/DataBase/: Data.cpp  Data.h  DataBase.cpp  DataBase.h  Table.cpp  Table.h
src/GestorDB/: GestorDB.cpp  GestorDB.h
